apps/immich/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: immich
  namespace: immich
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: immich
      port:
        number: 80
  tls:
  - hosts:
    - immich
